# Orbit

./: Cargo.toml  Plan.md_  README.md
orbit-core/: Cargo.toml
orbit-core/src/: config.rs  error.rs  ipc.rs  lib.rs  window.rs
orbit-service/: Cargo.toml
orbit-service/src/: main.rs
orbit-ui/: Cargo.toml
orbit-ui/src/: main.rs
orbit-wm/: Cargo.toml
orbit-wm/src/: hooks.rs  lib.rs  registry.rs
