[package]
name = "orbit-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orbit-service"
path = "src/main.rs"

[dependencies]
orbit-core = { path = "../orbit-core" }
orbit-wm = { path = "../orbit-wm" }
windows = { workspace = true }
windows-service = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
interprocess = { workspace = true }
