[package]
name = "orbit-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orbit-ui"
path = "src/main.rs"

[dependencies]
orbit-core = { path = "../orbit-core" }
orbit-wm = { path = "../orbit-wm" }
wgpui = { workspace = true }
windows = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
interprocess = { workspace = true }
futures = { workspace = true }
