[package]
name = "orbit-wm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orbit-core = { path = "../orbit-core" }
windows = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
